<resources>
    <string name="app_name">BDTest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="str_desc_room">Implementación de una base de datos local, con ayuda de la biblioteca Room</string>
    <string name="str_desc_firebase">Implementación de una base de datos en tiempo real con ayuda de Firebase</string>
    <string name="str_sin_tareas_room">Por el momento no se encontró ninguna tarea en la base de datos</string>
    <string name="str_lista_de_tareas">Lista de tareas</string>
    <string name="str_eliminar_todo">Eliminar todo</string>
    <string name="str_agregar_tarea">Agregar tarea</string>
    <string name="str_nombre_de_la_tarea">Nombre de la tarea</string>
    <string name="str_description">Descripción</string>
    <string name="str_fecha_de_entrega">Fecha de entrega</string>
</resources>