<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".room.RoomTasksActivity">

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_task"
        android:text="@string/str_agregar_tarea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:onClick="onClickAddTask"
        />

    <Button
        android:id="@+id/btn_delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_delete_all"
        android:text="@string/str_eliminar_todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_task"
        android:layout_marginTop="8dp"
        android:onClick="onCLickDeleteAll"/>

    <TextView
        android:id="@+id/txt_list_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete_all"
        android:text="@string/str_lista_de_tareas"
        android:textColor="@color/teal_700"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_list_tasks"
        android:background="@color/teal_700"
        android:layout_marginTop="4dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_line"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:layout_editor_absoluteX="8dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/linear_without_tasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/view_line"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        >

        <ImageView
            android:src="@drawable/ic_no_tasks"
            android:layout_width="120dp"
            android:layout_height="120dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/str_sin_tareas_room"
            android:textAlignment="center"
            android:textColor="#CECECE"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>