<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".room.AddTaskActivity">

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_task_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="8dp"
      app:errorEnabled="true"
      >
    <EditText
        android:id="@+id/edtxt_task_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:hint="@string/str_nombre_de_la_tarea"
        android:inputType="textAutoComplete"
        android:maxLength="20"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_task_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/til_task_name"
      android:layout_marginTop="8dp"
      app:errorEnabled="true"
      >
    <EditText
        android:id="@+id/edtxt_task_decription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:hint="@string/str_description"
        android:inputType="textAutoComplete"
        android:maxLength="20"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_date_terminated"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/til_task_description"
      android:layout_marginTop="8dp"
      app:errorEnabled="true"
      >
    <EditText
        android:id="@+id/edtxt_date_picker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:hint="@string/str_fecha_de_entrega"
        android:inputType="date"
        android:maxLength="20"
        android:clickable="true"
        android:onClick="onClickFragmentDate"
        />
  </com.google.android.material.textfield.TextInputLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>